# UrbanMotion

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.MD  fields.MD  ideas.txt  main.cpp
.github/workflows/: build.yaml
src/: App.cpp  App.h  Field.cpp  Field.h  IApp.h  IDraw.h  IMap.h  ImGuiApp.cpp  ImGuiApp.h  Map.cpp  Map.h  map1.txt
src/components/: Field.cpp  Field.h  Fields.cpp  Fields.h  IMap.h  ListOfVehicle.cpp  ListOfVehicle.h  Map.cpp  Map.h  VehicleInMap.cpp  VehicleInMap.h  idea.cpp  map1.txt
src/filestorage/: Handler.cpp  Handler.h  MapFile.cpp  MapFile.h  MapReader.cpp  MapReader.h  mapper.cpp  mapper.h
src/imgui/: App.cpp  App.h  Draw.h  DropArea.cpp  DropArea.h  DropTargetWindow.cpp  DropTargetWindow.h  GameScreen.cpp  GameScreen.h  IDraw.h  Manager.cpp  Manager.h  OpenGLScreenshotHandler.cpp  OpenGLScreenshotHandler.h  Panel.cpp  Panel.h  Point.h  RotationTransform.cpp  RotationTransform.h  ScreenshotHandler.h  WelcomeScreen.cpp  WelcomeScreen.h  Window.cpp  Window.h
src/interfaces/: IMap.h
src/movement/: Controller.cpp  Controller.h  Strategy.cpp  Strategy.h
src/texture/: Manager.cpp  Manager.h
tests/: FieldsTest.cpp  ListOfVehicleTest.cpp  WindowTest.cpp
